Added mention of SKA.

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -88,8 +88,7 @@ Columbia, Vancouver, BC, Canada, V6T 1Z1}
     are biased tracers of the large-scale structure of the Universe and show
     that the clustering signal could be measured using as few as
     $10000$ events. Such a survey is in-line with what may be achieved with
-    upcoming wide-field radio telescopes such as the Canadian
-    Hydrogen Intensity Mapping Experiment (CHIME).
+    upcoming wide-field radio telescopes.
 \end{abstract}
 
 \maketitle
@@ -620,7 +619,8 @@ that a survey detecting $10000$ fast radio bursts of cosmological
 origin could detect the
 clustering signal. This is in rough
 approximation to what might be achieved by the Canadian Hydrogen Intensity
-Mapping Experiment (CHIME)\footnote{\url{http://chime.phas.ubc.ca/}}
+Mapping Experiment (CHIME)\footnote{\url{http://chime.phas.ubc.ca/}}, the
+Square Kilometer Array\footnote{\url{http://www.skatelescope.org/}},
 or other upcoming wide-field telescopes.
 Looking forward, dispersion-space
 clustering could become a precision probe of large-scale structure should
