Added NSERC to acknowledgements.  Said 10000 is a modest amount of time for CHIME or SKA

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -618,7 +618,7 @@ shown in Figure~\ref{f:sensitivity}
 that a survey detecting $10000$ fast radio bursts of cosmological
 origin could detect the
 clustering signal. This is in rough
-approximation to what might be achieved by the Canadian Hydrogen Intensity
+approximation to what might be achieved in a modest amount of time by the Canadian Hydrogen Intensity
 Mapping Experiment (CHIME)\footnote{\url{http://chime.phas.ubc.ca/}}, the
 Square Kilometer Array\footnote{\url{http://www.skatelescope.org/}},
 or other upcoming wide-field telescopes.
@@ -640,7 +640,7 @@ contribution from the IGM.
 We thank Ue-Li Pen and Mathew McQuinn for helpful discussions.
 %
 KWM is supported by the Canadian Institute for Advanced Research, Global Scalars
-Program.
+Program.  The research of KS is supported in part by a National Science and Engineering Research Council (NSERC) of Canada Discovery Grant.
 
 \end{acknowledgments}
 
