line of sight --> line-of-sight and reference 'standard ping' in conclusion

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -267,7 +267,7 @@ caused by a misinterpretation of angular distances when the radial distance is
 mis-measured.  In both cases analogous terms are in principle present in 
 redshift space but are
 negligible. Because radial velocities are only sourced by modes with large
-radial wave vector, there is near perfect cancellation along the line of sight
+radial wave vector, there is near perfect cancellation along the line-of-sight
 and thus is very little net error in radial distance.
 
 For brevity in the following sections we define the coefficient of the integral
@@ -468,7 +468,7 @@ Lensing tomography is inexact because the kernel's shape depends on
 the source redshift, thus re-weighting the line-of-sight integral.
 In contrast, the integrand in the dispersion-space integral
 term is completely independent of the limit of integration, meaning
-contributions from different parts of the line of sight (and thus different
+contributions from different parts of the line-of-sight (and thus different
 spatial scales) can be separated exactly. A detailed study of dispersion space
 tomography is beyond the scope of this work.  To avoid our results being
 sensitive to the hard-to-model small scales, we assume that the contribution to the
@@ -598,11 +598,10 @@ in Figure~\ref{f:sensitivity}.
 
 \section{Discussion and conclusions}
 
-We have proposed using cosmological FRB sources as 3D tracers of the
-large-scale structure,
-using dispersion to estimate radial distance. It can be seen in
+We have proposed using cosmological FRB sources as standard pings to trace the 3D 
+large-scale structure of the Universe using dispersion distance. It can be seen in
 Figure~\ref{f:terms} that the signal is dominated by inhomogeneities in the
-electron density along the line of sight, inducing mis-estimates of radial
+electron density along the line-of-sight in each sky direction, inducing mis-estimates of radial
 distance and thus apparent clustering. These dispersion-space distortions could
 be used
 to study the distribution of free electrons in the Universe on large-scales.
