Fixed small grammar issues.

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -155,7 +155,7 @@ using linear theory.
 Similarly, as we show here, distance estimates from dispersion will be biased by
 inhomogeneities in the electron density \citep{2014ApJ...780L..33M},
 again leading to additional apparent
-clustering of sources in dispersion space.  In this \emph{Letter} we calculate
+clustering of sources in dispersion space.  In this \emph{letter} we calculate
 these dispersion-space distortions and consider the detectability of the signal by
 upcoming surveys.
 
@@ -312,8 +312,9 @@ structure evolution, the angular cross-power spectrum of such tracers is
 In reality the power spectrum evolves on the order of a Hubble time.
 The angular cross correlations will be very small unless $\chi$ and $\chi'$ are
 within a few correlation lengths of one another, roughly a hundred
-megaparsecs.  differences which leads to a straight-forward way to include the evolution of
-the perturbations (essentially indistinguishable from the full expression):
+megaparsecs.  The evolution of the power spectrum is negligible over these time 
+differences which leads to a straight-forward way to include the evolution of
+the perturbations:
 \begin{align}
     % I've tuned the alignment of the domain (using &)
     % here to get the equation number and
