mention one-point statistics in paragraph intrinsic/stocastic DM

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -541,12 +541,13 @@ $\delta_e$--$\delta_f$
 correlations included in the above formalism.  This will have a mean
 contribution, common to all sources and which may be epoch dependant, that will
 modify the mean dispersion--distance relation. This will need to be calibrated in some
-way or else fit with nuisance parameters during parameter estimation.  There
+way or else fit with nuisance parameters during parameter estimation.  
 will also be a stochastic piece which varies from source to source.  This will
 limit the precision at which $\chi_s$ can be measured, thus limiting the
-resolution of dispersion space density maps in the radial direction.
+resolution of dispersion space density maps in the radial direction.  However, we note that one-point statistics from the same dataset that is used to calculate clustering
+should provide empirical information about these properties independent of their physical origin.
 
-Detailed treatment of the above complications is beyond the scope of this
+Detailed treatment of the above source modelling is beyond the scope of this
 work. The magnitude of the contribution from the progenitor is at present
 unknown. To crudely deal with it here we use relatively large
 bins widths of $\Delta\chi = 100\,{\rm Mpc}/h$
