edit to discussion.

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -602,7 +602,8 @@ in Figure~\ref{f:sensitivity}.
 We have proposed using cosmological FRB sources as standard pings to trace the 3D 
 large-scale structure of the Universe using dispersion distance. It can be seen in
 Figure~\ref{f:terms} that the signal is dominated by inhomogeneities in the
-electron density along the line-of-sight in each sky direction, inducing mis-estimates of radial
+electron density along the different lines-of-sight,
+inducing mis-estimates of radial
 distance and thus apparent clustering. These dispersion-space distortions could
 be used
 to study the distribution of free electrons in the Universe on large-scales.
