rewording beyond the scope to future work

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -469,8 +469,8 @@ the source redshift, thus re-weighting the line-of-sight integral.
 In contrast, the integrand in the dispersion-space integral
 term is completely independent of the limit of integration, meaning
 contributions from different parts of the line-of-sight (and thus different
-spatial scales) can be separated exactly. A detailed study of dispersion space
-tomography is beyond the scope of this work.  To avoid our results being
+spatial scales) can be separated exactly. We leave a study of the potential of dispersion space
+tomography to future work.  To avoid our results being
 sensitive to the hard-to-model small scales, we assume that the contribution to the
 integral term from radial distances $\chi'' < 500\,{\rm Mpc}/h$ are well
 measured by the correlations with these radial slices. We thus ignore
