--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -312,9 +312,8 @@ structure evolution, the angular cross-power spectrum of such tracers is
 In reality the power spectrum evolves on the order of a Hubble time.
 The angular cross correlations will be very small unless $\chi$ and $\chi'$ are
 within a few correlation lengths of one another, roughly a hundred
-megaparsecs.  The evolution of the power spectrum is negligible over these time 
-differences which leads to a straight-forward way to include the evolution of
-the perturbations:
+megaparsecs.  The evolution of the power spectrum is negligible over these time
+differences which leads to a straight-forward way to include the evolution:
 \begin{align}
     % I've tuned the alignment of the domain (using &)
     % here to get the equation number and
@@ -542,11 +541,13 @@ $\delta_e$--$\delta_f$
 correlations included in the above formalism.  This will have a mean
 contribution, common to all sources and which may be epoch dependant, that will
 modify the mean dispersion--distance relation. This will need to be calibrated in some
-way or else fit with nuisance parameters during parameter estimation.  
-will also be a stochastic piece which varies from source to source.  This will
+way or else fit with nuisance parameters during parameter estimation.
+There will also be a stochastic piece which varies from source to source.  This will
 limit the precision at which $\chi_s$ can be measured, thus limiting the
-resolution of dispersion space density maps in the radial direction.  However, we note that one-point statistics from the same dataset that is used to calculate clustering
-should provide empirical information about these properties independent of their physical origin.
+resolution of dispersion space density maps in the radial direction.
+We note that one-point statistics from the same dataset 
+should provide empirical information about these properties independent
+of their physical origin.
 
 Detailed treatment of the above source modelling is beyond the scope of this
 work. The magnitude of the contribution from the progenitor is at present
@@ -600,7 +601,7 @@ in Figure~\ref{f:sensitivity}.
 
 \section{Discussion and conclusions}
 
-We have proposed using cosmological FRB sources as standard pings to trace the 3D 
+We have proposed using cosmological FRB sources as standard pings to trace the 3D
 large-scale structure of the Universe using dispersion distance. It can be seen in
 Figure~\ref{f:terms} that the signal is dominated by inhomogeneities in the
 electron density along the different lines-of-sight,
