--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -1,4 +1,4 @@
-\documentclass[twocolumn,prl,floatfix]{revtex4-1}
+\documentclass[twocolumn,nofootinbib,prl,floatfix]{revtex4-1}
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amssymb}
