end on positive note

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -601,6 +601,7 @@ in Figure~\ref{f:sensitivity}.
 
 \section{Discussion and conclusions}
 
+
 We have proposed using cosmological FRB sources as standard pings to trace the 3D
 large-scale structure of the Universe using dispersion distance. It can be seen in
 Figure~\ref{f:terms} that the signal is dominated by inhomogeneities in the
@@ -633,9 +634,11 @@ Figure~\ref{f:terms} in the cross term and both
 local-term curves. It may also be possible to extract the BAO feature
 from the integral
 term using tomography.
-This however requires that the contribution to dispersion from
-the source's environment and host halo be small compared to the
-contribution from the IGM.
+This however requires that the statistics of the contribution to dispersion from
+the source's environment and host halo to be well understood or small compared to the
+contribution from the line-of-sight.  
+
+Finally, we note that alone or by combination of dispersion-space data with redshift-space data on a subset of the population, independent redshift surveys of large-scale-structure, or gravitational lensing data could yield very powerful probes of cosmology.   Cosmological dispersion-space data could open a new window on to the structure of the Universe.
 
 
 \begin{acknowledgments}
