--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -54,7 +54,8 @@
 \begin{document}
 
 %\title{The large-scale structure of the Universe in dispersion measure space}
-\title{Dispersion distance and the matter distribution of the Universe in dispersion space}
+\title{Dispersion Distance and the Matter Distribution of the Universe in
+Dispersion Space}
 
 \author{Kiyoshi Wesley Masui}
  \affiliation{Department of Physics and Astronomy, University of British 
@@ -636,9 +637,13 @@ from the integral
 term using tomography.
 This however requires that the statistics of the contribution to dispersion from
 the source's environment and host halo to be well understood or small compared to the
-contribution from the line-of-sight.  
+contribution from the line-of-sight.
 
-Finally, we note that alone or by combination of dispersion-space data with redshift-space data on a subset of the population, independent redshift surveys of large-scale-structure, or gravitational lensing data could yield very powerful probes of cosmology.   Cosmological dispersion-space data could open a new window on to the structure of the Universe.
+Finally, we note that alone---or in combination with
+redshift data on a subset of the population, independent redshift surveys,
+or gravitational lensing surveys---dispersion-space surveys could yield very
+powerful probes of cosmology. Cosmological dispersion-space data could open a
+new window into the structure of the Universe.
 
 
 \begin{acknowledgments}
