Started referee response.

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -487,7 +487,14 @@ calculate the time dependant dark-matter power spectrum using {\tt CAMB}, using
 the integrated {\tt HALOFIT} to approximate the non-linear evolution. We assume
 that the electron bias is $b_e=1$, which should be true on large scales due to
 the approximate conservation of free electrons. The bias of FRB sources is
-unconstrained by data and we choose it to be $b_f=1.3$. The coefficient
+unconstrained by data and we choose it to be $b_f=1.3$, \blue{roughly
+the value for star forming galaxies at the relevant
+redshifts \citep{2011MNRAS.415.2876B} and providing reasonable contrast to the
+electrons.}
+\blue{The amplitude of the local and cross terms depend on the difference
+    between 
+}
+The coefficient
 $A(\chi)$ depends on the density of detected FRB sources, $\bar n_f(\chi)$.
 We use a simple model where all events above a fixed flux are detected,
 the intrinsic luminosity function has the form from
@@ -650,8 +657,9 @@ new window into the structure of the Universe.
 
 We thank Ue-Li Pen and Mathew McQuinn for helpful discussions.
 %
-KWM is supported by the Canadian Institute for Advanced Research, Global Scalars
-Program.  The research of KS is supported in part by a National Science and Engineering Research Council (NSERC) of Canada Discovery Grant.
+KWM is supported by the Canadian Institute for Advanced Research, Global
+Scholars Program.  The research of KS is supported in part by a National
+Science and Engineering Research Council (NSERC) of Canada Discovery Grant.
 
 \end{acknowledgments}
 
