--- a/writeup/refs.bib
+++ b/writeup/refs.bib
@@ -698,3 +698,25 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150505535C},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{2011MNRAS.415.2876B,
+   author = {{Blake}, C. and {Brough}, S. and {Colless}, M. and {Contreras}, C. and 
+	{Couch}, W. and {Croom}, S. and {Davis}, T. and {Drinkwater}, M.~J. and 
+	{Forster}, K. and {Gilbank}, D. and {Gladders}, M. and {Glazebrook}, K. and 
+	{Jelliffe}, B. and {Jurek}, R.~J. and {Li}, I.-H. and {Madore}, B. and 
+	{Martin}, D.~C. and {Pimbblet}, K. and {Poole}, G.~B. and {Pracy}, M. and 
+	{Sharp}, R. and {Wisnioski}, E. and {Woods}, D. and {Wyder}, T.~K. and 
+	{Yee}, H.~K.~C.},
+    title = "{The WiggleZ Dark Energy Survey: the growth rate of cosmic structure since redshift z=0.9}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1104.2948},
+ keywords = {surveys, cosmological parameters, large-scale structure of Universe},
+     year = 2011,
+    month = aug,
+   volume = 415,
+    pages = {2876-2891},
+      doi = {10.1111/j.1365-2966.2011.18903.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2011MNRAS.415.2876B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
